<resources>
    <string name="app_name">PegahWarehouse</string>
    <string name="title_activity_first_page">FirstPage</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="err_uname_password">نام کاربری یا کلمه عبور صحیح نیست!</string>
    <string name="txt_barcode">   Barcode</string>
    <string name="txt_deliver_count">تعداد تحویلی</string>
    <string name="txt_count_sample">0</string>
    <string name="txt_shrink_count_sample">0</string>
    <string name="txt_shrink_count">تعداد شرینک</string>
    <string name="btn_finish_deliver_caption">خاتمه تحویل</string>
    <string name="txt_deliver_id">شناسه تحویل</string>
    <string name="search_title">search</string>
    <string name="txt_userName">نام کاربری</string>
    <string name="txt_password">کلمه عبور</string>
    <string name="txt_show_pass">نمایش کلمه عبور</string>
    <string name="txt_login">ورود</string>
    <string name="txt_driver_code">کد راننده</string>
    <string name="progress_dialog">پیشرفت کار</string>
    <string name="please_wait">لطفا صبر کنید</string>
    <string name="done">خاتمه</string>
    <string name="input">حذف بارکد</string>
    <string name="input_content">بارکد مورد نظر جهت حذف را وارد نمایید</string>
    <string name="input_hint">بارکد</string>
    <string name="input_prefill"></string>
    <string name="start_delivery">شروع تحویل بار</string>
    <string name="driver_sample_code">(90)0001002003</string>
    <string name="truck_sample_code">(8004)6260007412345</string>
    <string name="barcode">barcode</string>
    <string name="length_error">طول بارکد خوانده شده صحیح نیست</string>
    <string name="Successfullylogin">ورود با موفقیت انجام شد</string>
    <string name="connectionError">نام کاربری یا کلمه عبور اشتباه است!</string>
    <string name="serverConnectionError">ارتباط با سرویس دهنده برقرار نشد!</string>

    <!--<string name="serverAddress">http://10.0.2.2</string>-->
    <string name="serverAddress">http://192.168.43.150</string>
    <!--<string name="serverAddress">http://192.168.1.24</string>-->
    <string name="loginURL">%1$s/user.json</string>
    <string name="driverAndTruckURL">%1$s/driver_truck.json</string>
    <string name="deliver_id_URL">%1$s/deliver_id.json</string>
    <string name="deliver_stat">%1$s/deliver_stat.json</string>
    <string name="ValidDriver">کد راننده مورد تایید است</string>
    <string name="ValidTruck">کد کامیون مورد تایید است</string>
    <string name="txtDriverName">نام راننده</string>
    <string name="txtDriverCode">کد راننده</string>
    <string name="txt_truckCode">کد کامیون</string>
    <string name="txt_truckPlaque">شماره پلاک</string>
    <string name="txt_truckModel">مدل خودرو</string>
    <string name="InvalidTruck">کد کامیون پیدا نشد</string>
    <string name="InvalidDriver">کد راننده پیدا نشد</string>
    <string name="noDeliverId">کد تحویل دریافت نشد</string>
    <string name="inputDeliverId">دریافت کد تحویل</string>
    <string name="input_deliver_message">لطفا کد تحویل بار را وارد کنید</string>
    <string name="input_deliverId_hint">کد تحویل</string>
    <string name="no">خیر</string>
    <string name="yes">بله</string>
</resources>
