<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding"
    tools:context=".LoginActivity"
    android:background="@color/blue_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:verticalScrollbarPosition="defaultPosition"
        app:layout_constraintBottom_toTopOf="@+id/btn_log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="102dp"
                android:layout_height="94dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/logo2"
                app:layout_constraintBottom_toTopOf="@+id/edt_user_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.692" />

            <EditText
                android:id="@+id/edt_user_name"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/edittext_top_bg"
                android:drawablePadding="@dimen/drawable_padding_value"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:gravity="right|center_vertical"
                android:hint="@string/txt_userName"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColorHint="#cccccc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="238dp" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittext_top_bg"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="@dimen/drawable_padding_value"
                android:gravity="right|center_vertical"
                android:hint="@string/txt_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="#cccccc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_user_name" />

            <CheckBox
                android:id="@+id/check_show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layoutDirection="rtl"
                android:text="@string/txt_show_pass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_password" />
        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/btn_log_in"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/button_custom"
        android:onClick="log_in_clicked"
        android:text="@string/txt_login"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edt_password"
        app:layout_constraintVertical_bias="1.0" />

    <!--</RelativeLayout>-->
</android.support.constraint.ConstraintLayout>